# abook

./: .gitignore  ANNOUNCE  AUTHORS  BUGS  ChangeLog  FAQ  Makefile.am  Makefile.in  README  README.md  RELEASE_NOTES  THANKS  TODO  abook.1  abook.c  abook.h  abook.spec.in  abook_curses.h  abook_rl.c  abook_rl.h  abookrc.5  acconfig.h  acinclude.m4  aclocal.m4  color.h  conff.c  conff.h  config.h.in  configure  configure.ac  configure.in  database.c  database.h  edit.c  edit.h  estr.c  estr.h  filter.c  filter.h  getname.c  (+25 more)
doc/: HOWTO.translating_abook
intl/: Makefile.in
m4/: po.m4
po/: LINGUAS  Makefile.in.in  Makevars  POTFILES.in  abook.pot  de.po  fr.gmo  fr.po  it.po  ja.po  sv.gmo  sv.po
